[metadata]
name = transiflow
version = 1.0.0
url = https://github.com/BIMAU/transiflow
license = Apache License 2.0
author = Sven Baars
author_email = s.baars@uu.nl
description = Implementations and continuation of some standard computational fluid dynamics problems using the finite volume method.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy
    scipy
    matplotlib
packages =
    transiflow
    transiflow.interface

[options.extras_require]
test =
    pytest
all =
    %(test)s

[aliases]
test = pytest

[tool:pytest]
norecursedirs = lib

[flake8]
ignore = E226,E261,E302,E731,C901,W503
max-line-length = 127
max-complexity = 10
exclude = lib